--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "us-financial-statement",
+  "name": "Financial-Metrics-App",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,6 +14,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
